# SplatForge

./: .env.example  .gitignore  CONTRACTS.md  PRODUCT.md  README.md  pyproject.toml  requirements.txt
a5_lora_adapter/: adapter_config.json  adapter_model.safetensors  lora.json  policy.pt
demo/assets/: README.md
demo/cached_run/lora_overnight/: curve.json
demo/cached_run/overnight/: curve.json
demo/scenes/: mug_table.json
demo/submission/: README.md
docs/: demo_script.md  f2_gating_facts.md  nvidia_isaac.md
groot/: README.md  eval_open_loop.py  eval_result.json  inference_result.json  run_inference.py  run_log.txt  setup_droplet.sh
notebooks/: a5_lora_finetune.ipynb
schemas/: curriculum.schema.json  metrics.schema.json
scripts/: curriculum_demo.py  eval_policy.py  export_arm_rig.py  fetch_public_splat.py  improve_demo.py  make_placeholder_splat.py  produce_lora_curve.py  produce_real_curve.py  record_demo_video.sh  replay_curve.py  replay_demo.py  rollout.py
src/splatforge/: __init__.py  cli.py  config.py  gating.py  models.py  paths.py
src/splatforge/api/: __init__.py  app.py  schemas.py
src/splatforge/contracts/: __init__.py  critique.py  curriculum.py  failure.py
tests/: conftest.py  test_cached_run.py  test_curriculum.py  test_curriculum_scene.py  test_gating.py  test_improvement.py  test_lora_loop.py  test_lora_trainer.py  test_metrics.py  test_replay.py  test_rerun_service.py  test_rollouts.py  test_storage.py  test_vlm_critic.py  test_workflow.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  main.tsx  styles.css
(+146 files in other folders)
