[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splatforge"
version = "0.1.0"
description = "Real-robot practice loop from tabletop scans, Gaussian Splats, AI critics, and policy adapters."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "google-genai>=0.3.0",
  "mujoco>=3.1",
  "pydantic>=2.7",
  "pymongo>=4.7",
  "python-dotenv>=1.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.5"]
train = ["torch>=2.2", "peft>=0.11"]

[project.scripts]
splatforge = "splatforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
